Use correct variable
The PG_VERSION determines the path of the volume, not the TEAMCITY_VERSION

--- a/compose-ubuntu/docker-compose.yml
+++ b/compose-ubuntu/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - POSTGRES_USER=teamcity_user
       - POSTGRES_DB=teamcity_db
     volumes:
-      - pgdata:/var/lib/postgresql/${TEAMCITY_VERSION}/docker
+      - pgdata:/var/lib/postgresql/${PG_VERSION}/docker
     ports:
       - 5433:5432
 
